--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,32 @@
   padding: 0;
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+body::before {
+  content: '';
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  background: var(yellow);
+  background-image: linear-gradient(
+      115deg,
+      rgba(245, 242, 47, 0.8),
+      rgba(205, 231, 108, 0.7)
+    ),
+    url(https://bandzoogle.com/files/3627/bzblog-how-to-design-a-great-songwriter-website-main.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
 body {
   width: 100%;
   display: flex;
@@ -25,6 +51,8 @@ header {
 
 header h1 {
   color: #DDDDDD;
+  font-weight: 400;
+  line-height: 1.2;
 }
 
 header h1 span {
@@ -33,11 +61,12 @@ header h1 span {
 
 header p {
   color: #DDDDDD;
+  font-size: 1.125rem;
 }
 
 /* form */
 form {
-  background-color: rgb(34, 34, 34);
+  background-color: black;
   color: #DDDDDD;
   margin: 0 auto;
   width: 60%;
@@ -48,10 +77,24 @@ form {
 }
 form #survey-form {}
 /* lable titles and services */
-label {}
+label {
+  display: flex;
+  align-items: center;
+  font-size: 1.125rem;
+  margin-bottom: 0.5rem;
 }
+
+input,
+button,
+select,
+textarea {
+  margin: 0;
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
+}
+
 form label input {
-  
 }
 form #services-label {}
 form select {}
