--- a/styles.css
+++ b/styles.css
@@ -7,12 +7,29 @@
   padding: 0;
 }
 
+:root {
+  --color-white: #f3f3f3;
+  --color-black: black;
+  --color-yellow-alpha: rgba(240, 253, 52, 0.952);
+  --color-yellow: #e6fa8b;
+}
+
 *,
 *::before,
 *::after {
   box-sizing: border-box;
 }
 
+body {
+  font-family: 'Roboto', sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.4;
+  color: var(--color-white);
+  margin: 0;
+}
+
+/* mobile friendly alternative to using background-attachment: fixed */
 body::before {
   content: '';
   position: fixed;
@@ -21,11 +38,11 @@ body::before {
   height: 100%;
   width: 100%;
   z-index: -1;
-  background: var(yellow);
+  background: var(--color-yellow-alpha);
   background-image: linear-gradient(
       115deg,
-      rgba(245, 242, 47, 0.8),
-      rgba(205, 231, 108, 0.7)
+      rgba(143, 158, 58, 0.8),
+      rgba(136, 136, 206, 0.7)
     ),
     url(https://bandzoogle.com/files/3627/bzblog-how-to-design-a-great-songwriter-website-main.jpg);
   background-size: cover;
@@ -33,50 +50,37 @@ body::before {
   background-position: center;
 }
 
-body {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  font-family: 'Roboto', 'Ubuntu', sans-serif;
-  background-color: #DDDDDD;
-}
+/* header */
 
-header {
-  background-color:black;
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-}
-
-header h1 {
-  color: #DDDDDD;
+h1 {
   font-weight: 400;
   line-height: 1.2;
+  color: #DDDDDD;
+}
+
+p {
+  font-size: 1.125rem;
+}
+
+h1,
+p {
+  margin-top: 0;
+  margin-bottom: 0.5rem;
+  color: #DDDDDD;
 }
 
 header h1 span {
   color: yellow;
 }
 
-header p {
-  color: #DDDDDD;
-  font-size: 1.125rem;
+header {
+  background-color:black;
+  padding: 5px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
 }
 
-/* form */
-form {
-  background-color: black;
-  color: #DDDDDD;
-  margin: 0 auto;
-  width: 60%;
-  padding: 1em;
-  border-radius: 1em;
-  margin-top: 20px;
-  align-items: center;
-}
-form #survey-form {}
-/* lable titles and services */
 label {
   display: flex;
   align-items: center;
@@ -94,13 +98,107 @@ textarea {
   line-height: inherit;
 }
 
-form label input {
+button {
+  border: none;
 }
-form #services-label {}
-form select {}
-form option {}
-form label input {}
-form button {
-  background-color: #504747;
-  color: #DDDDDD;
+
+.container {
+  width: 100%;
+  margin: auto 0 auto;
+  
 }
+
+@media (min-width: 576px) {
+  form {
+    max-width: 540px;
+  }
+}
+
+@media (min-width: 768px) {
+  form {
+    max-width: 720px;
+  }
+}
+
+.header {
+  padding: 0 0.625rem;
+  margin-bottom: 1.875rem;
+}
+
+#description {
+  font-style: italic;
+  font-weight: 200;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
+}
+
+.clue {
+  margin-left: 0.25rem;
+  font-size: 0.9rem;
+  color: #e4e4e4;
+}
+
+/* form */
+
+form {
+  background: var(--color-black);
+  padding: 2.5rem 0.625rem;
+  border-radius: 0.25rem;
+}
+
+@media (min-width: 480px) {
+  form {
+    padding: 2.5rem;
+  }
+}
+
+.form-group {
+  margin: 0 auto 1.25rem auto;
+  padding: 0.25rem;
+}
+
+.form-control {
+  display: block;
+  width: 100%;
+  height: 2.375rem;
+  padding: 0.375rem 0.75rem;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.form-control:focus {
+  border-color: #80bdff;
+  outline: 0;
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+}
+
+.input-radio,
+.input-checkbox {
+  display: inline-block;
+  margin-right: 0.625rem;
+  min-height: 1.25rem;
+  min-width: 1.25rem;
+}
+
+.input-textarea {
+  min-height: 120px;
+  width: 100%;
+  padding: 0.625rem;
+  resize: vertical;
+}
+
+.submit-button {
+  display: block;
+  width: 100%;
+  padding: 0.75rem;
+  background: var(--color-green);
+  color: inherit;
+  border-radius: 2px;
+  cursor: pointer;
+}
+
+
+
