--- a/styles.css
+++ b/styles.css
@@ -104,8 +104,9 @@ button {
 
 .container {
   width: 100%;
-  margin: auto 0 auto;
-  
+  margin: auto 0 auto; 
+  display: flex;
+  justify-content: center;
 }
 
 @media (min-width: 576px) {
